updated the design of the website

--- a/index.html
+++ b/index.html
@@ -13,17 +13,19 @@
     <div class="container">
         <header>
             <div class="header-info">
-                <h1>Brian Muli</h1>
-                <p>Email: brianmuli@gmail.com</p>
+                <h1>Brian Muli Muoki</h1>
+                <p>Nationality: Kenyan</p>
+                <p>DOB: 14/01/2004</p>
+                <p>Email: b.muoki@alustudent.com</p>
                 <p>Address: 123 Kigali Rwanda</p>
                 <p>Phone: +250791704016</p>
             </div>
             <nav>
                 <ul>
-                    <li><a href="#work-experience">Work Experience</a></li>
-                    <li><a href="#personal-projects">Personal Projects</a></li>
-                    <li><a href="#education">Education</a></li>
-                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#work-experience"> <strong>Work Experience</strong></a></li>
+                    <li><a href="#personal-projects"><strong>Personal Projects</strong></a></li>
+                    <li><a href="#education"><strong>Education</strong></a></li>
+                    <li><a href="#skills"><strong>Skills</strong></a></li>
             </nav>
         </header>
 
@@ -42,16 +44,27 @@
         <div class="section-heading" id="personal-projects">Personal Projects</div>
         <div class="personal-projects">
             <h3> Project 1</h3>
-            <p>A simple app that allows farmers to sell their products at a high profit.</p>
-            <p>Technologies Used: HTML, CSS, JavaScript, React, Node.js and python</p>
-            <p>Link: <a href="https://github.com/brianmuli/Project1">https://github.com/brianmuli/Project1</a></p>
+            <p> &#10003; A simple app that allows farmers to sell their products at a high profit.</p>
+            <p> &#10003; Technologies Used: HTML, CSS, JavaScript, React, Node.js and python</p>
+            <p> &#10003; Link: <a
+                    href="https://github.com/mulimuoki001/alu-AirBnB_clone_v2">https://github.com/brianmuli/Project1</a>
+            </p>
         </div>
 
         <div class="section-heading" id="education">Education</div>
         <div class="education">
-            <h3>African Leadership University</h3>
-            <p>Bachelor of Science in Software Engineering</p>
-            <p>GPA: 4.5</p>
+            <h3> 3. African Leadership University</h3>
+            <p> &#10003; Bachelor of Science in Software Engineering</p>
+            <p> &#10003; GPA: 4.5</p>
+
+            <h3> 2. Starehe Boys' Centre and School</h3>
+            <P> &#10003; Highschool Diploma</P>
+            <p> &#10003; Grade: B+, 72 points</p>
+
+            <h3>1. Mukuru Kwa Njenga Primary</h3>
+            <P> &#10003; Primary School Certificate</P>
+            <p>&#10003; Grade: A, 82 points</p>
+
 
         </div>
         <div class="section-heading" id="skills">Skills</div>
