updated the design of the website

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h3>Software Engineer, African Leadership University</h3>
             <p>September 2022 - Present</p>
             <ul>
-                <li>Developed and maintained web applications using HTML, CSS, Python, and Node.</li>
+                <li>Developed and maintained web applications using HTML, CSS, Python, and Node.js</li>
                 <li>Collaborated with fellow engineers to design, develop, and maintain software solutions.</li>
                 <li>Designed and implemented REST apis for data access and integration with othersystems</li>
             </ul>
